modificacion a detalle e in-game

--- a/detalles.html
+++ b/detalles.html
@@ -79,37 +79,34 @@
       <article>
         <div class="superior-container">
           <div class="broadcast">
-            <p>
-              <a href="./index.html">INICIO</a> >   
-              <a href="./index.html">ACCION</a> >
-              <a href="./in-game.html">MARVEL VS DC</a> >
+            <div>
+              <a href="./index.html">INICIO</a> <span>></span>
+              <a href="./index.html">ACCION</a> <span>></span>
+              <a href="./in-game.html">MARVEL VS DC</a> <span>></span>
               <a href="">DETALLES</a>
-            </p>
-          </div>
-          <div class="compartir-juego">
-            <button>Compartir</button>
+            </div>
           </div>
         </div>
-        <div class="pjuego-container">
-          <div class="pantalla-juego"></div>
-          <div class="instrucciones-juego">
+        <div class="detalles-container">
+          <div class="video-detalles"></div>
+          <div class="galeria-detalles">
             <div>
-              <h3>Instrucciones</h3>
-              <p>
-                Al comienzo del juego, un jugador es escogido aleatoriamente
-                para empezar. <br /><br />
-                La idea del juego es lograr conseguir una secuencia de minimo 4
-                fichas, pudiendo ser mas. Esta secuencia de fichas puede ser
-                tanto horizontal, vertical o diagonal, es decir, en todas las
-                direcciones.
-                <br /><br />
-                Para tirar una ficha simplemente haz click sobre la columna
-                donde deseas que caiga la misma con el boton izquierdo de tu
-                mouse.
-              </p>
-              <br />
-
-              <a href="./detalles.html">Detalles</a>
+              <img src="./img/avengers portada.png" alt="" />
+            </div>
+            <div>
+              <img src="./img/avengers portada.png" alt="" />
+            </div>
+            <div>
+              <img src="./img/avengers portada.png" alt="" />
+            </div>
+            <div>
+              <img src="./img/avengers portada.png" alt="" />
+            </div>
+            <div>
+              <img src="./img/avengers portada.png" alt="" />
+            </div>
+            <div>
+              <img src="./img/avengers portada.png" alt="" />
             </div>
           </div>
         </div>
