--- a/in-game.html
+++ b/in-game.html
@@ -79,11 +79,11 @@
       <article>
         <div class="superior-container">
           <div class="broadcast">
-            <p>
-              <a href="./index.html">INICIO</a> >
-              <a href="./index.html">ACCION</a> >
-              <a href="">MARVEL VS DC</a>
-            </p>
+            <div>
+              <a href="./index.html">INICIO</a> <span>></span>
+              <a href="./index.html">ACCION</a> <span>></span>
+              <a href="./in-game.html">MARVEL VS DC</a> 
+            </div>
           </div>
           <div class="compartir-juego">
             <button>Compartir</button>
