carrito terminado, detalles casi terminado, home responsive casi terminado

--- a/carrito.html
+++ b/carrito.html
@@ -20,9 +20,7 @@
             <h1>Gaming Zone</h1>
           </div>
           <div class="nav-right">
-            <a href="./carrito.html"
-              ><img id="cart-img" src="./img/icons8-cart-96.png" alt=""
-            /></a>
+            <img id="cart-img" src="./img/icons8-cart-96.png" alt="" />
             <img id="profile-picture" src="./img/foto perfil.jpg" alt="" />
           </div>
           <div id="fondo-desplegable"></div>
@@ -83,82 +81,61 @@
           <div class="broadcast">
             <div>
               <a href="./index.html">INICIO</a> <span>></span>
-              <a href="./index.html">ACCION</a> <span>></span>
-              <a href="./in-game.html">MARVEL VS DC</a> <span>></span>
-              <a href="">DETALLES</a>
+              <a href="">CARRITO DE COMPRAS</a>
             </div>
           </div>
         </div>
-        <div class="detalles-container">
-          <div class="video-detalles">
-            <div>
-              <img src="./img/btm vs spd.png" alt="" />
-            </div>
-            <div class="boton-play-video">
-              <img src="./img/boton-de-play.png" alt="" />
-              <p>Reproducir</p>
-            </div>
-          </div>
-          <div class="galeria-detalles">
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
-            </div>
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
-            </div>
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
-            </div>
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
-            </div>
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
-            </div>
-          </div>
-        </div>
-        <div class="info-adicional-container">
-          <div class="text-links-detalles">
-            <div class="texto-detalles-container">
-              <p>
-                Elige a tu bando y personaje favoritos para sumergirte en esta
-                emocionante aventura en la que solo puede haber un vencedor.
-                ¿Serás tú quien prevalezca en el enfrentamiento épico entre dos
-                de las franquicias más icónicas y queridas de la historia del
-                cómic? ¡Prepárate para presenciar un choque de titanes mientras
-                Marvel y DC se enfrentan en una batalla por la supremacía!
-              </p>
-            </div>
-            <div class="link-detalles-container">
+        <div class="carrito-container">
+          <h3>Carrito de compras</h3>
+          <div class="juegos-carrito-container">
+            <h4>Juegos en carrito</h4>
+            <hr />
+            <div class="juegos-en-carrito">
               <ul>
                 <li>
-                  <a
-                    href="https://www.youtube.com/watch?v=LYIlYv3bTlk&t=117s"
-                    target="_blank"
-                    >Visita el trailer del videojuego para tenes una experiencia
-                    mas inmersiva</a
-                  >
+                  <div>
+                    <button>
+                      <img src="./img/close.png" alt="quitar juego" />
+                    </button>
+                    <p>Grand Theft Food</p>
+                  </div>
+                  <p>$29.99</p>
                 </li>
                 <li>
-                  <a
-                    href="https://desuperhero.com/ropa-de-superheroes/"
-                    target="_blank"
-                    >Compra mercaderia con respecto a la tematica del juego
-                    aqui</a
-                  >
+                  <div>
+                    <button>
+                      <img src="./img/close.png" alt="quitar juego" />
+                    </button>
+                    <p>HITCAT 2</p>
+                  </div>
+                  <p>$12.99</p>
                 </li>
                 <li>
-                  <a
-                    href="https://en.wikipedia.org/wiki/DC_vs._Marvel"
-                    target="_blank"
-                    >Mas informacion sobre esta rivalidad tan emocionante</a
-                  >
+                  <div>
+                    <button>
+                      <img src="./img/close.png" alt="quitar juego" />
+                    </button>
+                    <p>Skinwalker.exe</p>
+                  </div>
+                  <p>$3.99</p>
                 </li>
               </ul>
+              <hr />
+              <div class="total-carrito-container">
+                <div class="total-carrito">
+                  <p>Total</p>
+                </div>
+                <div>
+                  <p><span>$46.97</span></p>
+                </div>
+              </div>
+              <div class="boton-carrito">
+                <button class="jugar">Pagar</button>
+              </div>
             </div>
-            <div class="img-detalles-container">
-              <img src="./img/injustice.png" alt="" />
-            </div>
+          </div>
+          <div class="total-resaltado">
+            <p>Total: <span>$46.97</span></p>
           </div>
         </div>
       </article>
@@ -225,6 +202,5 @@
     </footer>
     <script src="./cargaInicio.js"></script>
     <script src="./desplegables.js"></script>
-    <script src="./carrucelVertical.js"></script>
   </body>
 </html>
