--- a/in-game.html
+++ b/in-game.html
@@ -20,7 +20,9 @@
             <h1>Gaming Zone</h1>
           </div>
           <div class="nav-right">
-            <img id="cart-img" src="./img/icons8-cart-96.png" alt="" />
+            <a href="./carrito.html">
+              <img id="cart-img" src="./img/icons8-cart-96.png" alt="" />
+            </a>
             <img id="profile-picture" src="./img/foto perfil.jpg" alt="" />
           </div>
           <div id="fondo-desplegable"></div>
@@ -82,7 +84,7 @@
             <div>
               <a href="./index.html">INICIO</a> <span>></span>
               <a href="./index.html">ACCION</a> <span>></span>
-              <a href="./in-game.html">MARVEL VS DC</a> 
+              <a href="./in-game.html">MARVEL VS DC</a>
             </div>
           </div>
           <div class="compartir-juego">
@@ -186,9 +188,9 @@
                   <h3>CachorroChupetao</h3>
                   <div class="texto-comentario">
                     <p>
-                      Muy buen juego, lo jugué con un amigo y pasamos un buen
+                      Muy buen juego, lo jugué con mi hermano y pasamos un buen
                       rato. Al principio no se me daba muy bien, por lo que mi
-                      amigo me ganó un par de veces, pero una vez que aprendí
+                      hermano me ganó un par de veces, pero una vez que aprendí
                       las mecánicas y la lógica del juego, empecé a ganarle al
                       punto de que ya soy invencible para él.
                     </p>
