--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Gaming Zone</h1>
           </div>
           <div class="nav-right">
-            <img id="cart-img" src="./img/icons8-cart-96.png" alt="" />
+            <a href="./carrito.html"><img id="cart-img" src="./img/icons8-cart-96.png" alt="" /></a>
             <img id="profile-picture" src="./img/foto perfil.jpg" alt="" />
           </div>
           <div id="fondo-desplegable"></div>
@@ -95,7 +95,7 @@
                 <div class="overlay">
                   <h4>$29.99</h4>
                   <h4>INJUSTICE</h4>
-                  <button class="pagar"><p>Jugar</p></button>
+                  <button class="jugar"><p>Jugar</p></button>
                 </div>
               </div>
               <div class="image-container">
