avance detalles carrucel automatico, arreglo de detalles en in-game, entre otros arreglos mas

--- a/detalles.html
+++ b/detalles.html
@@ -100,20 +100,19 @@
             </div>
           </div>
           <div class="galeria-detalles">
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
-            </div>
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
-            </div>
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
-            </div>
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
-            </div>
-            <div>
-              <img src="./img/avengers portada.png" alt="" />
+            <div class="galeria-contenedor">
+              <div>
+                <img src="./img/avengers portada.png" alt="" />
+              </div>
+              <div>
+                <img src="./img/avengers portada.png" alt="" />
+              </div>
+              <div>
+                <img src="./img/avengers portada.png" alt="" />
+              </div>
+              <div>
+                <img src="./img/avengers portada.png" alt="" />
+              </div>
             </div>
           </div>
         </div>
