--- a/in-game.html
+++ b/in-game.html
@@ -88,7 +88,35 @@
             </div>
           </div>
           <div class="compartir-juego">
-            <button>Compartir</button>
+            <button class="compartir-juego-boton">Compartir</button>
+          </div>
+        </div>
+        <div class="container-compartir">
+          <div class="salir-compartir">
+            <img src="./img/proximo.png" alt="" />
+          </div>
+          <div class="compartir-links-container">
+            <h3>Comparte con tus amigos mediante este enlace!</h3>
+            <div class="link-compartir-container">
+              <input
+                type="text"
+                name=""
+                id=""
+                value="https://www.gamingzone.com/inicio/accion/guardians&of&the&galaxy"
+                readonly
+              />
+              <div class="enlace-compartir-img-container">
+                <img src="./img/enlace-roto.png" alt="" />
+              </div>
+            </div>
+            <h3>O mediante redes!</h3>
+            <div class="redes-sociales-compartir">
+              <div><img src="./img/instagram.png" alt="" /></div>
+              <div><img src="./img/facebook.png" alt="" /></div>
+              <div><img src="./img/twitter.png" alt="" /></div>
+              <div><img src="./img/github.png" alt="" /></div>
+              <div><img src="./img/youtube.png" alt="" /></div>
+            </div>
           </div>
         </div>
         <div class="pjuego-container">
@@ -109,7 +137,6 @@
                 mouse.
               </p>
               <br />
-
               <a href="./detalles.html">Detalles</a>
             </div>
           </div>
@@ -174,6 +201,7 @@
           </div>
         </div>
         <div class="comentarios">
+          <h2>3 Comentarios</h2>
           <div class="input-container">
             <div class="input">
               <input placeholder="Escribe un comentario..." type="text" />
@@ -307,5 +335,6 @@
     <script src="./cargaInicio.js"></script>
     <script src="./desplegables.js"></script>
     <script src="./carruceles.js"></script>
+    <script src="./despliegueCompartir.js"></script>
   </body>
 </html>
