registro terminado, falta tocar el responsive

--- a/detalles.html
+++ b/detalles.html
@@ -102,16 +102,19 @@
           <div class="galeria-detalles">
             <div class="galeria-contenedor">
               <div>
-                <img src="./img/avengers portada.png" alt="" />
+                <img src="./img/galeria1.png" alt="" />
               </div>
               <div>
-                <img src="./img/avengers portada.png" alt="" />
+                <img src="./img/galeria2.png" alt="" />
               </div>
               <div>
-                <img src="./img/avengers portada.png" alt="" />
+                <img src="./img/galeria3.png" alt="" />
               </div>
               <div>
-                <img src="./img/avengers portada.png" alt="" />
+                <img src="./img/galeria4.png" alt="" />
+              </div>
+              <div>
+                <img src="./img/galeria5.png" alt="" />
               </div>
             </div>
           </div>
@@ -156,7 +159,7 @@
               </ul>
             </div>
             <div class="img-detalles-container">
-              <img src="./img/injustice.png" alt="" />
+              <img src="./img/galeria5.png" alt="" />
             </div>
           </div>
         </div>
