--- a/detalles.html
+++ b/detalles.html
@@ -148,7 +148,7 @@
         <div class="detalles-container">
           <div class="video-detalles">
             <div>
-              <img src="./img/btm vs spd.png" alt="" />
+              <img src="./img/video.png" alt="" />
             </div>
             <div class="boton-play-video">
               <img src="./img/boton-de-play.png" alt="" />
