--- a/carrito.html
+++ b/carrito.html
@@ -21,12 +21,12 @@
           </div>
           <div class="nav-right">
             <a href="./carrito.html"><img id="cart-img" src="./img/icons8-cart-96.png" alt="" /></a>
-            <img id="profile-picture" src="./img/foto perfil.jpg" alt="" />
+            <img id="profile-picture" src="./img/usuario.png" alt="" />
           </div>
           <div id="fondo-desplegable"></div>
           <div class="categoria-desplegable">
             <div>
-              <img src="img/close.png" id="cerra-categoria" class="cerrar-desplegable">
+              <img src="img/close.png" id="cerrar-categoria" class="cerrar-desplegable">
             </div>
             <ul>
               <li><a href="./index.html">Inicio</a></li>
