--- a/in-game.html
+++ b/in-game.html
@@ -21,12 +21,12 @@
           </div>
           <div class="nav-right">
             <a href="./carrito.html"><img id="cart-img" src="./img/icons8-cart-96.png" alt="" /></a>
-            <img id="profile-picture" src="./img/foto perfil.jpg" alt="" />
+            <img id="profile-picture" src="./img/usuario.png" alt="" />
           </div>
           <div id="fondo-desplegable"></div>
           <div class="categoria-desplegable">
             <div>
-              <img src="img/close.png" id="cerra-categoria" class="cerrar-desplegable">
+              <img src="img/close.png" id="cerrar-categoria" class="cerrar-desplegable">
             </div>
             <ul>
               <li><a href="./index.html">Inicio</a></li>
@@ -176,7 +176,10 @@
           </div>
         </div>
         <div class="pjuego-container">
-          <div class="pantalla-juego"></div>
+          <div class="pantalla-juego">
+            <h3>MARVEL VS DC</h3>
+            <h4>CUATRO EN LINEA</h4>
+          </div>
           <div class="instrucciones-juego">
             <div>
               <h3>Instrucciones</h3>
